quark/test/quark/AST/Errors/cannotTakeAddresOfRValue-001.qk
// RUN: not quark --emit-ast "%s" 2>&1 | FileCheck "%s"

fn foo: -> void {
  &4;
}
// CHECK:Error: Cannot take address of r-value
